--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="styles.css" /> 
-    <script src="script.js"></script> 
+    <script></script> 
     <title>Link CSS to HTML</title>
+    <style></style>
 </head>
 <body>
     <h1>hello</h1>
