--- a/index.html
+++ b/index.html
@@ -57,5 +57,29 @@ mes compétences&nbsp;et mes projets.<br><br>
 
 <a rel="history" href="#page-7">Photographies</a><br>
 <br><a target="_blank" rel="history" href="contact-form">Email</a><br><a target="_blank" href="https://www.instagram.com/cargoworld/">Instagram</a>
+
+<column-set gutter="2rem"><column-unit slot="0" span="4"><u><a href="page-6" rel="history">Visuels musique “Winnie”</a></u>
+
+<br><br><br>
+
+
+
+
+
+
+<br>
+En tombant par hasard sur <i>"Bibs"</i>, une musique ambient dans mes recommandations, j’ai été immédiatement captivé par son atmosphère. Ce morceau m’a inspiré à créer un visuel audio-réactif en mettant en pratique mes récents apprentissages sur TouchDesigner.<br>
+<br>
+Après avoir partagé un premier aperçu sur Instagram, j’ai eu la chance d’attirer l’attention de <i>Winnie</i>, l’artiste, qui m’a proposé de collaborer pour réaliser des visuels pour ses compositions. J’ai ainsi conçu deux vidéos mêlant TouchDesigner et After Effects, créant une symbiose entre musique et image.<br>
+
+
+
+
+
+
+</column-unit><column-unit slot="1" span="8"><br>
+<gallery-slideshow transition-speed="0.8"><media-item data-do-not-index="false" hash="W860551825957978135147203865180" limit-by="width" rotation="0" scale="100" slot="slot-0"><figcaption class="caption empty" slot="caption"></figcaption></media-item><media-item data-do-not-index="false" hash="W860551825957978135147203865180" limit-by="width" rotation="0" scale="100" slot="slot-1"><figcaption class="caption empty" slot="caption"></figcaption></media-item><media-item data-do-not-index="true" hash="W860551825957978135147203865180" limit-by="width" rotation="0" scale="100" slot="slot-2"><figcaption class="caption empty" slot="caption"></figcaption></media-item><media-item data-do-not-index="true" hash="W860551825957978135147203865180" limit-by="width" rotation="0" scale="100" slot="slot-3"><figcaption class="caption empty" slot="caption"></figcaption></media-item></gallery-slideshow><br>
+</column-unit></column-set>
+    
 </body>
 </html>
