--- a/index.html
+++ b/index.html
@@ -1,85 +1,66 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="styles.css" /> 
-    <title>ROMANE PASCO - GRAPHISME.ETC</title>
-    <script>  
-      
-    </style>
+    <title>Romane Pasco - Graphisme</title>
 </head>
 <body>
-<a href="#" rel="home-page">Pasco Roma</a><span uses="drag"><a href="#" rel="home-page">ne</a></span><br><br>
+    <header>
+        <h1><a href="#" rel="home-page">Romane Pasco</a></h1>
+        <p>Je suis étudiante en graphisme, et ce site me permet de répertorier mes travaux.</p>
+        <p>Découvrez mon univers graphique, mes compétences et mes projets.</p>
+    </header>
 
-Je suis étudiante en graphisme et ce site me permet de répertorier mes travaux.
+    <main>
+        <section>
+            <h2>Projets</h2>
+            <ul>
+                <li><a href="#page-6" rel="history">Visuels musique “Winnie”</a></li>
+                <li><a href="#page-1" rel="history">Affiches Aragonites</a></li>
+                <li><a href="#page-8" rel="history">Affiches Hêtres remarquables</a></li>
+                <li><a href="#page-2" rel="history">Workshop jeu de société</a></li>
+                <li><a href="#page-3" rel="history">Workshop “Boîte à madeleines”</a></li>
+                <li><a href="#page-4" rel="history">Moonlit Brew</a></li>
+                <li><a href="#page-5" rel="history">Charte graphique “Grainouillette”</a></li>
+                <li><a href="#page-9" rel="history">JPO ESAAT</a></li>
+                <li><a href="#page-10" rel="history">UI/UX “Flanô”</a></li>
+                <li><a href="#page-7" rel="history">Photographies</a></li>
+            </ul>
+        </section>
 
-&nbsp;<br>
-<br>
-Découvrez mon univers graphique&nbsp;<br>
-mes compétences&nbsp;et mes projets.<br><br>
-<br>
+        <section>
+            <h2>À propos du projet “Visuels musique Winnie”</h2>
+            <p>
+                En tombant par hasard sur <i>“Bibs”</i>, une musique ambient dans mes recommandations, 
+j’ai été immédiatement captivée par son atmosphère. Ce morceau m’a inspirée à créer un visuel audio-réactif 
+en mettant en pratique mes récents apprentissages sur TouchDesigner.
+            </p>
+            <p>
+                Après avoir partagé un premier aperçu sur Instagram, j’ai eu la chance d’attirer l’attention de <i>Winnie</i>, 
+l’artiste, qui m’a proposé de collaborer pour réaliser des visuels pour ses compositions. 
+J’ai ainsi conçu deux vidéos mêlant TouchDesigner et After Effects, créant une symbiose entre musique et image.
+            </p>
+        </section>
 
+        <section>
+            <h2>Galerie</h2>
+            <gallery-slideshow transition-speed="0.8">
+                <media-item hash="W860551825957978135147203865180" slot="slot-0"></media-item>
+                <media-item hash="W860551825957978135147203865180" slot="slot-1"></media-item>
+                <media-item hash="W860551825957978135147203865180" slot="slot-2"></media-item>
+                <media-item hash="W860551825957978135147203865180" slot="slot-3"></media-item>
+            </gallery-slideshow>
+        </section>
+    </main>
 
-
-<a href="#page-6" rel="history">Visuels musique “Winnie”</a>
-
-<br>
-<a href="#page-1" rel="history">Affiches Aragonites</a><br>
-
-<a href="#page-8" rel="history">Affiches hetres remarquable</a> 
-
-
-
-<br>
-
-
-<a rel="history" href="#page-2">Workshop jeu de société</a>
-
-<br>
-
-
-<a rel="history" href="#page-3">Workshop “Boîte à madeleines“</a>
-
-<br>
-
-
-<a rel="history" href="#page-4">Moonlit Brew</a><br>
-
-<a rel="history" href="#page-5">Charte graphique “grainouilette”</a><br>
-<a rel="history" href="#page-9">JPO ESAAT</a><br>
-<a rel="history" href="#page-10">UI/UX “Flanô”</a>
-<br>
-<a rel="history" href="#page-11"></a><br>
-<br>3d et autres<br><br>
-
-
-
-<a rel="history" href="#page-7">Photographies</a><br>
-<br><a target="_blank" rel="history" href="contact-form">Email</a><br><a target="_blank" href="https://www.instagram.com/cargoworld/">Instagram</a>
-
-<column-set gutter="2rem"><column-unit slot="0" span="4"><u><a href="page-6" rel="history">Visuels musique “Winnie”</a></u>
-
-<br><br><br>
-
-
-
-
-
-
-<br>
-En tombant par hasard sur <i>"Bibs"</i>, une musique ambient dans mes recommandations, j’ai été immédiatement captivé par son atmosphère. Ce morceau m’a inspiré à créer un visuel audio-réactif en mettant en pratique mes récents apprentissages sur TouchDesigner.<br>
-<br>
-Après avoir partagé un premier aperçu sur Instagram, j’ai eu la chance d’attirer l’attention de <i>Winnie</i>, l’artiste, qui m’a proposé de collaborer pour réaliser des visuels pour ses compositions. J’ai ainsi conçu deux vidéos mêlant TouchDesigner et After Effects, créant une symbiose entre musique et image.<br>
-
-
-
-
-
-
-</column-unit><column-unit slot="1" span="8"><br>
-<gallery-slideshow transition-speed="0.8"><media-item data-do-not-index="false" hash="W860551825957978135147203865180" limit-by="width" rotation="0" scale="100" slot="slot-0"><figcaption class="caption empty" slot="caption"></figcaption></media-item><media-item data-do-not-index="false" hash="W860551825957978135147203865180" limit-by="width" rotation="0" scale="100" slot="slot-1"><figcaption class="caption empty" slot="caption"></figcaption></media-item><media-item data-do-not-index="true" hash="W860551825957978135147203865180" limit-by="width" rotation="0" scale="100" slot="slot-2"><figcaption class="caption empty" slot="caption"></figcaption></media-item><media-item data-do-not-index="true" hash="W860551825957978135147203865180" limit-by="width" rotation="0" scale="100" slot="slot-3"><figcaption class="caption empty" slot="caption"></figcaption></media-item></gallery-slideshow><br>
-</column-unit></column-set>
-    
+    <footer>
+        <p>Retrouvez-moi :</p>
+        <ul>
+            <li><a href="contact-form" target="_blank" rel="noopener noreferrer">Email</a></li>
+            <li><a href="https://www.instagram.com/cargoworld/" target="_blank" rel="noopener noreferrer">Instagram</a></li>
+        </ul>
+    </footer>
 </body>
 </html>
