--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- Inclure la bibliothèque p5.js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/p5.min.js"></script>
     <!-- Lier le fichier script.js -->
-    <script src="script.js" defer></script>-->
+    <script src="script.js" defer></script>
     <title>Romane Pasco - Graphisme</title>
 </head>
 <body>
