--- a/index.html
+++ b/index.html
@@ -1,24 +1,18 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css" />
-    <!-- Inclure la bibliothèque p5.js -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/p5.min.js"></script>
-    <!-- Lier le fichier script.js -->
-    <script src="script.js" defer></script>
-    <title>Romane Pasco - Graphisme</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Romane Pasco - Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="p5-container"></div>
-    <div class="content">
-        <div class="title">Pasco Romane</div>
-        <div class="menu">
-            <div>Projets</div>
-            <div>Galerie</div>
-            <div>Contacts</div>
-        </div>
-    </div>
+    <h1>Pasco Romane</h1>
+    <nav>
+        <a href="#">H<span>o</span><span>m</span><span>e</span></a>
+        <a href="#">G<span>a</span><span>l</span><span>e</span><span>r</span><span>i</span><span>e</span></a>
+        <a href="#">C<span>o</span><span>n</span><span>t</span><span>a</span><span>c</span><span>t</span><span>s</span></a>
+    </nav>
+    <script src="script.js"></script>
 </body>
 </html>
