--- a/index.html
+++ b/index.html
@@ -7,12 +7,61 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Pasco Romane</h1>
-    <nav>
-        <a href="#">H<span>o</span><span>m</span><span>e</span></a>
-        <a href="#">G<span>a</span><span>l</span><span>e</span><span>r</span><span>i</span><span>e</span></a>
-        <a href="#">C<span>o</span><span>n</span><span>t</span><span>a</span><span>c</span><span>t</span><span>s</span></a>
+    <div class="about-section">
+    <h1 class="designer-name">Pasco Romane</h1>
+    <div class="content-wrapper">
+      <div class="text-content">
+        <p class="bio-text">
+          Je suis Romane Pasco, graphiste en deuxième année de DN MADe Graphisme,
+          spécialité supports connectés à l'ESAAT. Mon parcours me permet
+          d'explorer une multitude de supports, aussi bien numériques que
+          matériels, et c'est ce qui nourrit ma pratique. De Blender et ses
+          Geometry Nodes à Figma avec ses nouvelles fonctions de variables, j'aime
+          utiliser des outils différents pour répondre à des besoins variés. Je me
+          forme aussi à Webflow pour enrichir mes compétences en design web,
+          tandis que Photoshop me permet de pousser mes projets plus loin avec des
+          fonctionnalités avancées comme les actions. Je crée également des objets
+          imprimés originaux avec InDesign, comme des carnets créatifs ou des
+          projets plus documentaires, et j'expérimente des visuels réactifs avec
+          TouchDesigner.
+          <br />
+          <br />
+          Mon approche du design est fondée sur l'expérimentation et
+          l'interconnexion entre différents supports. J'aime repousser les limites
+          des outils et des techniques pour proposer des solutions visuelles qui
+          sont à la fois innovantes et adaptées aux enjeux de chaque projet. Je
+          cherche toujours à comprendre l'essence d'un projet pour créer des
+          visuels qui soient à la fois percutants et fonctionnels.
+          <br />
+          <br />
+          Je suis à la recherche de nouvelles collaborations où je pourrais mettre
+          mes compétences au service de projets créatifs et ambitieux. Si vous
+          cherchez une graphiste polyvalente, curieuse et ouverte à de nouvelles
+          idées, je serais ravie de discuter de vos besoins.
+        </p>
+        <div class="contact-info">
+          <div class="contact-label">Contact</div>
+          <div class="contact-details">
+            Mail
+            <br />
+            Behance
+            <br />
+            Instagram
+          </div>
+        </div>
+      </div>
+      <img
+        loading="lazy"
+        src="https://cdn.builder.io/api/v1/image/assets/TEMP/6c4b896aa6aec98363702e54cf718c370ba0253f8c0fefa3108708d1a8544c8e?placeholderIfAbsent=true&apiKey=4babb428a060468c8602dcc86f06b3e0"
+        class="profile-image"
+        alt="Romane Pasco, graphiste"
+      />
+    </div>
+    <nav class="navigation">
+      <a href="#" class="nav-item">Home</a>
+      <a href="#" class="nav-item">Galerie</a>
+      <a href="#" class="nav-item nav-item-active">Contacts</a>
     </nav>
-    <script src="script.js"></script>
+  </div>
 </body>
 </html>
