--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Pasco Romane</h1>
     <nav>
-        <a href="Home.html" class="clickable" data-name="Home" id="home-link">Home</a>
+        <a href="index.html" class="clickable" data-name="Home" id="home-link">Home</a>
         <a href="Galerie.html"class="clickable" data-name="Galerie" id="galerie-link">Galerie</a>
         <a href="Contact.html" class="clickable" data-name="Contact" id="home-link"id="contact-link">Contact</a>
     </nav>
