--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 <body>
     <h1>Pasco Romane</h1>
     <nav>
+        
         <a href="index.html" class="clickable" data-name="Home" id="home-link">Home</a>
         <a href="Galerie.html"class="clickable" data-name="Galerie" id="galerie-link">Galerie</a>
         <a href="Contact.html" class="clickable" data-name="Contact" id="home-link"id="contact-link">Contact</a>
+        <button id="colorButton"class="clickable" data-name="Magie" >Couleurs</button>
     </nav>
     <div id="tooltip" class="tooltip"></div>
     <script src="script.js"></script>
