--- a/Contact.html
+++ b/Contact.html
@@ -27,7 +27,6 @@
             </p>
             <div class="contact-section">
                 <p>Contact </p>
-                
                 <ul>
                     <li><a href="mailto:psc.romane@gmail.com" class="clickable" data-name="psc.romane@gmail.com">Mail</a></li>
                     <li><a href="https://www.behance.net/romanepas"class="clickable" data-name="Behance">Behance</a></li>
@@ -44,7 +43,8 @@
     <nav>
         <a href="Home.html" class="clickable" data-name="Home" id="home-link">Home</a>
         <a href="Galerie.html"class="clickable" data-name="Galerie" id="galerie-link">Galerie</a>
-        <a href="Contact.html" class="clickable" data-name="Contact" id="contact-link">Contact</a>
+        <a href="Contact.html" class="clickable" data-name="Contact" id="home-link"id="contact-link">Contact</a>
+        <button id="colorButton"class="clickable" data-name="Magie" >Couleurs</button>
     </nav>
     <div id="tooltip" class="tooltip"></div>
     <script src="script.js"></script>
