--- a/Galerie.html
+++ b/Galerie.html
@@ -8,6 +8,14 @@
 </head>
 <body>
     <h1>Pasco Romane</h1>
+    <div class="grid">
+        <img src="images\3.png" alt="Photo 1">
+        <video src="images\Jpo3.mp4" autoplay loop muted></video>
+        <img src="images\Vinyl_Record_Mockup_01_S2.png" alt="Photo 2">
+        <video src="images\NEWVERpophello.mp4" autoplay loop muted></video>
+        <img src="images\eier satan frontMOCK.png" alt="Photo 3">
+      </div>
+
     <nav>
         <a href="index.html" class="clickable" data-name="Home" id="home-link">Home</a>
         <a href="Galerie.html"class="clickable" data-name="Galerie" id="galerie-link">Galerie</a>
