--- a/index.html
+++ b/index.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Romane Pasco - Portfolio</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Pasco Romane</h1>
+    <h1 style="top: -100vh; /* Positionnement initial pour l'animation */
+  transition: top 1s ease-in-out, font-size 0.5s ease, transform 0.5s ease; /* Durée et type d'animation */">Pasco Romane</h1>
+
+<script src="box.js">
+</script>
+
     <nav>
         
         <a href="index.html" class="clickable" data-name="Home" id="home-link">Home</a>
@@ -16,6 +22,7 @@
         <button id="colorButton"class="clickable" data-name="Magie" >Couleurs</button>
     </nav>
     <div id="tooltip" class="tooltip"></div>
+
     <script src="script.js"></script>
 </body>
 </html>
