--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <script src="box.js"></script>
+
     <h1 style="top: -100vh; /* Positionnement initial pour l'animation */
   transition: top 1s ease-in-out, font-size 0.5s ease, transform 0.5s ease; /* Durée et type d'animation */">Pasco Romane</h1>
 
-<script src="box.js">
-</script>
+
 
     <nav>
         
