--- a/Galerie.html
+++ b/Galerie.html
@@ -14,10 +14,16 @@
         <img src="images\Vinyl_Record_Mockup_01_S2.png" alt="Photo 2">
         <video src="images\NEWVERpophello.mp4" autoplay loop muted></video>
         <img src="images\eier satan frontMOCK.png" alt="Photo 3">
+        <!--<img src="images\BONHOMME.png" alt="Photo 3">
+        <img src="images\Slide 16_9 - 5.png" alt="Photo 3">
+        <img src="images\Plan de travail 4.png" alt="Photo 3"> 
+        <img src="images\Meahousegreen.png" alt="Photo 3">
+        <img src="images\Instagram post - 7.png" alt="Photo 3">
+        <img src="images\App Icon Mockup 1.png" alt="Photo 3">-->
       </div>
 
     <nav>
-        <a href="index.html" class="clickable" data-name="Home" id="home-link">Home</a>
+        <a href="Home.html" class="clickable" data-name="Home" id="home-link">Home</a>
         <a href="Galerie.html"class="clickable" data-name="Galerie" id="galerie-link">Galerie</a>
         <a href="Contact.html" class="clickable" data-name="Contact" id="home-link"id="contact-link">Contact</a>
         <button id="colorButton"class="clickable" data-name="Magie" >Couleurs</button>
