--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <script src="box.js"></script>
 
-    <h1 style="top: -100vh; /* Positionnement initial pour l'animation */
+    <h1 style="position: absolute; top: -100vh; /* Positionnement initial pour l'animation */
   transition: top 1s ease-in-out, font-size 0.5s ease, transform 0.5s ease; /* Durée et type d'animation */">Pasco Romane</h1>
 
 
