--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <canvas id="grain-overlay"></canvas>
     <script src="box.js"></script>
 
     <h1 style="position: absolute; top: -100vh; /* Positionnement initial pour l'animation */
-  transition: top 1s ease-in-out, font-size 0.5s ease, transform 0.5s ease; /* Durée et type d'animation */">Pasco Romane</h1>
+  transition: top 1s ease-in-out, font-size 0.5s ease, transform 0.5s ease; /* Durée et type d'animation */">PASCO ROMANE</h1>
+
 
 
     <nav>
@@ -23,6 +25,139 @@
     </nav>
     <div id="tooltip" class="tooltip"></div>
 
+    <script>
+        // Liste des palettes définies
+        const palettes = [
+            { background: "#a5dcf8", text: "#664cde" }, 
+            { background: "#f9f274", text: "#8311ef" }, 
+            { background: "#5de537", text: "#0b0baf" }, 
+            { background: "#b0c942", text: "#edf6d1" }, 
+            { background: "#d2bfa7", text: "#3d78b2" }, 
+            { background: "#000000", text: "#ffffff" }, 
+            { background: "#ffffff", text: "#000000" }, 
+            { background: "#c6dbb5", text: "#d44e14" }, 
+            { background: "#1625f6", text: "#eadde7" }, 
+            { background: "#e6733e", text: "#edeb5d" }, 
+            { background: "#fcddc4", text: "#2f7eb7" }, 
+            { background: "#d3d7a1", text: "#0bb4c6" }, 
+        ];
+
+        // Fonction pour changer les couleurs
+        function changeColors() {
+            const randomPalette = palettes[Math.floor(Math.random() * palettes.length)];
+
+            // Appliquer les couleurs au body
+            document.body.style.backgroundColor = randomPalette.background;
+            document.body.style.color = randomPalette.text;
+
+            // Appliquer aux liens et au bouton
+            const links = document.querySelectorAll('a');
+            links.forEach(link => {
+                link.style.color = randomPalette.text;
+            });
+
+            const button = document.getElementById('colorButton');
+            button.style.color = randomPalette.text;
+
+            const scoreBox = document.getElementById('scoreBox');
+            scoreBox.style.backgroundColor = randomPalette.text;  // Inverser le fond et le texte
+            scoreBox.style.color = randomPalette.background;      
+
+            
+            // Sauvegarder les couleurs dans le localStorage
+            localStorage.setItem('backgroundColor', randomPalette.background);
+            localStorage.setItem('textColor', randomPalette.text);
+        }
+
+        // Fonction pour appliquer les couleurs sauvegardées
+        function applyStoredColors() {
+            const storedBackgroundColor = localStorage.getItem('backgroundColor');
+            const storedTextColor = localStorage.getItem('textColor');
+
+            if (storedBackgroundColor && storedTextColor) {
+                document.body.style.backgroundColor = storedBackgroundColor;
+                document.body.style.color = storedTextColor;
+
+                const links = document.querySelectorAll('a');
+                links.forEach(link => {
+                    link.style.color = storedTextColor;
+                });
+
+                const button = document.getElementById('colorButton');
+                button.style.color = storedTextColor;
+            }
+        }
+
+        // Appliquer les couleurs stockées à l'ouverture de la page
+        window.addEventListener('load', function() {
+            applyStoredColors();  // Charger les couleurs stockées
+            // Initialiser la position de l'élément <h1>
+            document.querySelector('h1').style.top = '20px';
+        });
+
+        // Ajouter un événement au bouton pour changer les couleurs
+        document.getElementById('colorButton').addEventListener('click', changeColors);
+
+        // Gestion des tooltips
+        const elements = document.querySelectorAll('.clickable');
+        const tooltip = document.getElementById('tooltip');
+
+        elements.forEach(element => {
+            element.addEventListener('mouseenter', function() {
+                const name = this.getAttribute('data-name');
+                tooltip.textContent = name;
+                tooltip.style.display = 'block';
+            });
+
+            element.addEventListener('mousemove', function(event) {
+                tooltip.style.left = event.pageX + 10 + 'px';
+                tooltip.style.top = event.pageY + 10 + 'px';
+            });
+
+            element.addEventListener('mouseleave', function() {
+                tooltip.style.display = 'none';
+            });
+        });
+        // Ajout du grain sur le canvas
+window.addEventListener('load', function() {
+    const canvas = document.getElementById("grain-overlay");
+    const ctx = canvas.getContext("2d");
+
+    // Ajuster la taille du canvas à la taille de la fenêtre
+    canvas.width = window.innerWidth;
+    canvas.height = window.innerHeight;
+
+    // Fonction pour dessiner le bruit/grain
+    function drawNoise() {
+        const imageData = ctx.createImageData(canvas.width, canvas.height);
+        const pixels = imageData.data;
+
+        for (let i = 0; i < pixels.length; i += 4) {
+            const intensity = Math.random() * 170;
+            pixels[i] = pixels[i + 1] = pixels[i + 2] = intensity; // Gris
+            pixels[i + 3] = 50; // Opacité du grain (0-255)
+        }
+
+        ctx.putImageData(imageData, 0, 0);
+    }
+
+    // Fonction pour animer le bruit/grain
+    function animateNoise() {
+        drawNoise();
+        requestAnimationFrame(animateNoise);
+    }
+
+    animateNoise();
+
+    // Ajuster la taille du canvas si la fenêtre est redimensionnée
+    window.addEventListener("resize", function() {
+        canvas.width = window.innerWidth;
+        canvas.height = window.innerHeight;
+    });
+});
+
+
+    </script>
     <script src="script.js"></script>
 </body>
 </html>
