--- a/Contact.html
+++ b/Contact.html
@@ -42,7 +42,7 @@
     </div>
 
     <nav>
-        <a href="Home.html" class="clickable" data-name="Home" id="home-link">Home</a>
+        <a href="index.html" class="clickable" data-name="Home" id="home-link">Home</a>
         <a href="Galerie.html" class="clickable" data-name="Galerie" id="galerie-link">Galerie</a>
         <a href="Contact.html" class="clickable" data-name="Contact" id="contact-link">Contact</a>
         <button id="colorButton" class="clickable" data-name="Magie">Couleurs</button>
