--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <nav>
         
-        <a href="index.html" class="clickable" data-name="Home" id="home-link">Home</a>
+        <a href="Home.html" class="clickable" data-name="Home" id="home-link">Home</a>
         <a href="Galerie.html"class="clickable" data-name="Galerie" id="galerie-link">Galerie</a>
         <a href="Contact.html" class="clickable" data-name="Contact" id="home-link"id="contact-link">Contact</a>
         <button id="colorButton"class="clickable" data-name="Magie" >Couleurs</button>
