--- a/Galerie.html
+++ b/Galerie.html
@@ -10,7 +10,7 @@
 <body>
     <h1>Pasco Romane</h1>
     <div class="grid">
-        <img src="images\3.png" alt="Photo 1">
+        <img src="ezgif-4-e4a5822ac6.gif" alt="Photo 1">
         <video src="images\Jpo3.mp4" autoplay loop muted></video>
         <img src="images\Vinyl_Record_Mockup_01_S2.png" alt="Photo 2">
         <video src="images\NEWVERpophello.mp4" autoplay loop muted></video>
