--- a/Galerie.html
+++ b/Galerie.html
@@ -12,7 +12,7 @@
     <div class="grid">
         <img src="ezgif-4-e4a5822ac6.gif" alt="Photo 1">
         <video src="JPO_video.mp4" autoplay loop muted></video>
-        <img src="images\Vinyl_Record_Mockup_01_S2.png" alt="Photo 2">
+        <img src="Flano.png" alt="Photo 2">
         <video src="images\NEWVERpophello.mp4" autoplay loop muted></video>
         <img src="images\eier satan frontMOCK.png" alt="Photo 3">
         <!--<img src="images\BONHOMME.png" alt="Photo 3">
