--- a/Contact.html
+++ b/Contact.html
@@ -38,7 +38,7 @@
             </div>
         </div>
         <div class="image-section">
-            <img src="Moi.jpeg" alt="Photo de Romane Pasco">
+            <img src="media/Moi.jpeg" alt="Photo de Romane Pasco">
         </div>
     </div>
 
