--- a/Galerie.html
+++ b/Galerie.html
@@ -30,7 +30,7 @@
     <div class="grid">
         <img src="ezgif-4-e4a5822ac6.gif" alt="Photo 1">
         <video src="JPO_video.mp4" autoplay loop muted></video>
-        <img src="Flano.png" alt="Photo 2">
+        <img src="media/Flano.png" alt="Photo 2">
         <video src="images/NEWVERpophello.mp4" autoplay loop muted></video>
         <img src="images/eier satan frontMOCK.png" alt="Photo 3">
     </div>
