--- a/Galerie.html
+++ b/Galerie.html
@@ -28,11 +28,11 @@
     
     <h1>Pasco Romane</h1>
     <div class="grid">
-        <img src="ezgif-4-e4a5822ac6.gif" alt="Photo 1">
-        <video src="JPO_video.mp4" autoplay loop muted></video>
+        <img src="media/ezgif-4-e4a5822ac6.gif" alt="Photo 1">
+        <video src="media/JPO_video.mp4" autoplay loop muted></video>
         <img src="media/Flano.png" alt="Photo 2">
-        <video src="images/NEWVERpophello.mp4" autoplay loop muted></video>
-        <img src="images/eier satan frontMOCK.png" alt="Photo 3">
+        <video src="media/NEWVERpophello.mp4" autoplay loop muted></video>
+        <img src="media/eier satan frontMOCK.png" alt="Photo 3">
     </div>
 
     <nav>
