--- a/Galerie.html
+++ b/Galerie.html
@@ -32,7 +32,7 @@
         <video src="media/JPO_video.mp4" autoplay loop muted></video>
         <img src="media/Flano.png" alt="Photo 2">
         <video src="media/NEWVERpophello.mp4" autoplay loop muted></video>
-        <img src="media/eier satan frontMOCK.png" alt="Photo 3">
+        <img src="media/Seeddating" alt="Photo 3">
     </div>
 
     <nav>
