--- a/Galerie.html
+++ b/Galerie.html
@@ -16,7 +16,7 @@
     <div class="grid">
         <img src="images\3.png" class="clickable" data-name="Workshop Fayot">
         <img src="images\A4 - 9.jpg" class="clickable" data-name="Affiches aragonites">
-        <img src="images\App Icon Mockup 1.png" class="clickable" data-name="UI/UX App Flanô">
+        <img src="https://github.com/pasr0/media/blob/2be441b5121b71bf4914cf76fa85d256be4d0580/main/media/Flano.png" class="clickable" data-name="UI/UX App Flanô">
         <video src="images\Jpo3.mp4" autoplay loop muted class="clickable" data-name="Cavalary JPO"></video>
         <img src="images\Slide 16_9 - 1.png" class="clickable" data-name="Workshop Risographie">
         <img src="images\Slide 16_9 - 5.png" class="clickable" data-name="Collection Photo">
