--- a/Galerie.html
+++ b/Galerie.html
@@ -14,7 +14,7 @@
     
     <h1>Pasco Romane</h1>
     <div class="grid">
-        <img src="images\3.png" class="clickable" data-name="Workshop Fayot">
+        <img src="https://github.com/pasr0/media/blob/main/BAHANCEFAYT/3.png?raw=true" class="clickable" data-name="Workshop Fayot">
         <img src="https://github.com/pasr0/media/blob/main/A4%20-%209.jpg?raw=true" class="clickable" data-name="Affiches aragonites">
         <img src="https://github.com/pasr0/media/blob/main/main/MAIN%20DOC/App%20Icon%20Mockup%201.png?raw=true" class="clickable" data-name="UI/UX App Flanô">
         <video src="images\Jpo3.mp4" autoplay loop muted class="clickable" data-name="Cavalary JPO"></video>
