--- a/Galerie.html
+++ b/Galerie.html
@@ -17,7 +17,7 @@
         <img src="https://github.com/pasr0/media/blob/main/BAHANCEFAYT/3.png?raw=true" class="clickable" data-name="Workshop Fayot">
         <img src="https://github.com/pasr0/media/blob/main/A4%20-%209.jpg?raw=true" class="clickable" data-name="Affiches aragonites">
         <img src="https://github.com/pasr0/media/blob/main/main/MAIN%20DOC/App%20Icon%20Mockup%201.png?raw=true" class="clickable" data-name="UI/UX App Flanô">
-        <video src="images\Jpo3.mp4" autoplay loop muted class="clickable" data-name="Cavalary JPO"></video>
+        <video src="https://github.com/pasr0/media/blob/main/JPO_Hello.gif?raw=true" autoplay loop muted class="clickable" data-name="Cavalary JPO"></video>
         <img src="images\Slide 16_9 - 1.png" class="clickable" data-name="Workshop Risographie">
          <img src="https://github.com/pasr0/media/blob/main/ezgif-1b9be9d21055f2.gif?raw=true" class="clickable" data-name="Varispeed - Winnie Musik">
         <img src="images\Slide 16_9 - 5.png" class="clickable" data-name="Collection Photo">
