--- a/Galerie.html
+++ b/Galerie.html
@@ -21,7 +21,7 @@
         <img src="https://github.com/pasr0/media/blob/main/Slide%2016_9%20-%201.png?raw=true" class="clickable" data-name="Workshop Risographie">
          <img src="https://github.com/pasr0/media/blob/main/Bibs_Winnie.gif?raw=true" class="clickable" data-name="Winnie Musik">
         <img src="images\Slide 16_9 - 5.png" class="clickable" data-name="Collection Photo">
-        <video src="images\NEWVERpophello.mp4" autoplay loop muted class="clickable" data-name="Cavalary JPO"></video>
+        <video src="https://github.com/pasr0/media/blob/main/JPO_Hello.gif?raw=true" autoplay loop muted class="clickable" data-name="Cavalary JPO"></video>
         <img src="images\Vinyl_Record_Mockup_01_S2.png" class="clickable" data-name="Stereolab cover">
     
     </div>
