--- a/Galerie.html
+++ b/Galerie.html
@@ -22,7 +22,7 @@
          <img src="https://github.com/pasr0/media/blob/main/Bibs_Winnie.gif?raw=true" class="clickable" data-name="Winnie Musik">
         <img src="images\Slide 16_9 - 5.png" class="clickable" data-name="Collection Photo">
         <video src="https://github.com/pasr0/media/blob/main/JPO_Hello.gif?raw=true" autoplay loop muted class="clickable" data-name="Cavalary JPO"></video>
-        <img src="images\Vinyl_Record_Mockup_01_S2.png" class="clickable" data-name="Stereolab cover">
+        <img src="https://github.com/pasr0/media/blob/main/Logo_vhs.gif?raw=true" class="clickable" data-name="VHS simulation">
     
     </div>
 
